Dopo la prima lezione

--- a/lezioni/01_Events&RandomVariables.ipynb
+++ b/lezioni/01_Events&RandomVariables.ipynb
@@ -120,7 +120,7 @@
    ],
    "source": [
     "# RUN THIS CELL: it loads some style files\n",
-    "from IPython.core.display import HTML\n",
+    "from IPython.display import HTML\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
