prima della lezione

--- a/esercitazioni/02_tpt.ipynb
+++ b/esercitazioni/02_tpt.ipynb
@@ -129,6 +129,8 @@
    "id": "35fb5886",
    "metadata": {},
    "source": [
+    "***Esercizio 1***\n",
+    "\n",
     "Abbiamo due dadi equilibrati, il primo ha sei faccie numerate da 1 a 6; il secondo ha quattro facce numerate da 1 a 4. Consideriamo la variabile aleatoria $X$ che corrisponde al seguente processo: \n",
     "\n",
     "Estraiamo a caso con probabilità $1/2$ uno dei due dadi, lo lanciamo ed osserviamo il numero ottenuto.\n",
@@ -136,6 +138,16 @@
     "Calcolare la distribuzione di $X$. \n",
     "\n",
     "Suggerimento: si usi il Teorema delle Probabilità Totali."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0332039",
+   "metadata": {},
+   "source": [
+    "***Esercizio 2***\n",
+    "\n",
+    "The executive of a company uses either a train or a bus to reach his office with equal probability. The train is late $10\\%$ of the times. The bus is late $20\\%$ of the times. What is the probability that the executive reaches late the office?"
    ]
   }
  ],
