--- a/lezioni/05_RegolaBayes.ipynb
+++ b/lezioni/05_RegolaBayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +111,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# RUN THIS CELL: it loads some style files\n",
-    "from IPython.core.display import HTML\n",
+    "from IPython.display import HTML, display, Math\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
@@ -127,62 +127,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probabilità condizionata\n",
+    "# Regola di Bayes\n",
     "\n",
-    "Dato $A, \\Phi\\subseteq\\Omega$ tali che $\\Pr(\\Phi)\\neq 0$ definiamo \n",
+    "Il fatto seguente si chiama <mark>regola (o teorema) di Bayes</mark>.\n",
     "\n",
-    "$\\quad$<mark>$\\Pr\\,(\\,A\\mathbin|\\Phi\\,)$</mark>$\\quad=\\quad\\displaystyle\\frac{\\Pr(A\\cap\\Phi)}{\\Pr(\\Phi)\\vphantom{\\Big[}}$\n",
+    "Per ogni coppia di eventi $A$ e $B$ di probabilità $>0$ \n",
     "\n",
-    "Questo si legge <mark>probabilità di $A$ dato $\\Phi$</mark>. \n",
+    "$\\quad\\Pr(A|B)\\quad=\\quad\\dfrac{\\Pr(B|A)\\cdot\\Pr(A)}{\\Pr(B)}.$\n",
     "\n",
-    "Si verifica facilmente che $\\Pr(\\,\\cdot\\,|\\Phi)$ soddisfa a tutte le proprietà di $\\Pr(\\,\\cdot\\,$) se rimpiazziamo $\\Omega$ con $\\Phi$ ed ogni sottoinsieme $A$ di $\\Omega$ con $A\\cap\\Phi$."
+    "In molte applicazioni $\\Pr(B)$ viene calcolato usando il teorema delle probabilità totali. La regola diventa\n",
+    "\n",
+    "$\\quad\\phantom{\\Pr(A|B)}\\quad=\\quad\\dfrac{\\Pr(B|A)\\cdot \\Pr(A)}{\\Pr(B|A)\\Pr(A)+\\Pr(B|\\neg A)\\Pr(\\neg A)}.$\n",
+    "\n",
+    "I termini che occorrono nella regola di Bayes sono\n",
+    "\n",
+    "$\\Pr(A)\\quad$ <mark>probabilità a priori</mark> in in inglese <mark class=ita>prior probability</mark>\n",
+    "\n",
+    "$\\Pr(B|A)\\quad$ <mark>verosimiglianza</mark> in in inglese <mark class=ita>liklihood</mark>\n",
+    "\n",
+    "$\\Pr(A|B)\\quad$ <mark>probabilità a posteriori</mark> in in inglese <mark class=ita>posterior probability</mark>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Teorema delle Probabilità Totali\n",
+    "# Esempio: fumatori e non fumatori\n",
     "\n",
-    "Il fatto seguente si chiama <mark>Teorema delle Probabilità Totali</mark>: siano $A_1,\\dots,A_n$ eventi mutuamente esclusivi ed esaustivi. Sia $C$ un qualsiasi altro evento, allora\n",
+    "Tra le persone affette da una certa patologia, il $20\\%$ è fumatore. La prevalenza nella popolazione generale è del $2\\%$. Il $10\\%$ della popolazione fuma. Calcolare la probabilità che un fumatore sia affetto da questa patologia.\n",
     "\n",
-    "$\\quad\\Pr(C)\n",
-    "\\quad=\\quad\n",
-    "\\Pr(A_1)\\cdot \\Pr\\big(C| A_1)\\ +\\ \\dots\\ +\\ \\Pr(A_n)\\cdot \\Pr\\big(C| A_n)$\n",
     "\n",
-    "notazione: $\\ =\\quad$\n",
-    "<mark style=\"padding:2.2ex;\">$\\displaystyle\\sum^n_{i=1} \\Pr(A_i)\\cdot \\Pr\\big(C| A_i\\big)$</mark>\n",
+    "$F\\quad$ insieme dei fumatori\n",
     "\n",
-    "<mark>Mutualmente esclusivi</mark>: $\\quad A_i\\cap A_j\\ =\\ \\varnothing\\quad$ per ogni $i\\neq j$\n",
+    "$A\\quad$ insieme persone affette da $A$\n",
     "\n",
-    "<mark>Esaustivi</mark>: $\\displaystyle\\quad\\Omega\\ =\\ A_1\\cup\\dots\\cup A_n\\ =\\ $ notazione: <mark style=\"padding:2.2ex;\">$\\displaystyle\\bigcup^n_{i=1}A_i$</mark>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Esempio\n",
+    "$\\Pr(A)=0.02\\quad $prevalenza nella popolazione generale\n",
     "\n",
-    "In letteratura è riportata la prevalenza di una certa patologia nella popolazione femminile ($5\\%$) e nella popolazione maschile ($3\\%$). Che prevalenza dovremo aspettarci in una popolazione composta dal $60\\%$ di maschi e dal $40\\%$ di femmine?\n",
+    "$\\Pr(F)=0.10\\quad$ frazione di fumatori nella popolazione generale\n",
     "\n",
-    "$F$ evento: femmina\n",
+    "$\\Pr(F|A)=0.20\\quad$ frazione di fumatori nella popolazione malata\n",
     "\n",
-    "$M$ evento: maschio\n",
+    "$\\Pr(A|F)=\\dfrac{\\Pr(F|A)\\cdot \\Pr(A)}{\\Pr(F)} =\\quad$ prevalenza tra i fumatori\n",
     "\n",
-    "$A$ evento: affetto dalla patologia\n",
-    "\n",
-    "$P(F)=0.4$\n",
-    "\n",
-    "$P(M)=0.6$\n",
-    "\n",
-    "$P(A|F)=0.05$\n",
-    "\n",
-    "$P(A|M)=0.03$\n",
-    "\n",
-    "$P(A)=P(A|F)P(F)+P(A|M)P(M) = $ \n",
-    "\n",
-    "      risultato numerico nella cella sottostante"
+    "     il calcolo numerico nella cella sottostante"
    ]
   },
   {
@@ -192,23 +179,60 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$$\\Pr(A|F)=0.04$$"
+      ],
       "text/plain": [
-       "0.038"
+       "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "Pr_F  = 0.4\n",
-    "Pr_M  = 0.6\n",
-    "Pr_A_F = 0.05 \n",
-    "Pr_A_M = 0.03\n",
-    "Pr_A = Pr_A_F * Pr_F + Pr_A_M * Pr_M\n",
-    "round(Pr_A, 4) # arrotonda il risultato a 4 cifre decimali"
+    "Pr_A  = 0.02                    # prevalenza nella popolazione generale\n",
+    "Pr_F  = 0.10                    # frazione di fumatori nella popolazione generale\n",
+    "Pr_F_A = 0.20                    # frazione di fumatori nella popolazione malata\n",
+    "Pr_A_F = ( Pr_F_A * Pr_A ) / Pr_F    # prevalenza tra i fumatori\n",
+    "display(Math(r'\\Pr(A|F)={}'.format(round(Pr_A_F,4))))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Esempio: portatrice sana di emofilia \n",
+    "\n",
+    "Hemophilia is a disease that exhibits X-chromosome-linked recessive inheritance, meaning that a male who inherits the gene that causes the disease on the X-chromosome is affected, whereas a female carrying the gene on only one of her two X-chromosomes is not affected. The disease is generally fatal for women who inherit two such genes.\n",
+    "\n",
+    "Consider a woman who has an affected brother. We are also told that her father is not affected, which implies that her mother must be a carrier of the hemophilia gene. Thus the woman herself has a fifty-fifty chance of having the gene.\n",
+    "\n",
+    "Suppose she has a son (from a man who is not affected) that is not affected. What is the probability that she is a carrier?\n",
+    "\n",
+    "$\\Omega\\quad$  set of women daughter of carrier \n",
+    "\n",
+    "$C\\quad$ set of women that are carrier\n",
+    "\n",
+    "$S_{na}\\quad$ set of women that have (exactly) one son and he is not affected\n",
+    "\n",
+    "$\\Pr(C)\\ =\\ 1/2\\quad$ \n",
+    "\n",
+    "$\\Pr(S_{na}|C)\\ =\\ 1/2\\quad$\n",
+    "\n",
+    "$\\Pr(C|S_{na})\\ =\\ \\dfrac{\\Pr(S_{na}|C)\\cdot \\Pr(C)}{\\Pr(S_{na})}$\n",
+    "\n",
+    "$\\phantom{\\Pr(C|S_{na})}\\ =\\ \\dfrac{\\Pr(S_{na}|C)\\cdot \\Pr(C)}{\\Pr(S_{na}|C)\\cdot \\Pr(C)+\\Pr(S_{na}|\\neg C)\\cdot \\Pr(\\neg C)}$\n",
+    "\n",
+    "$\\phantom{\\Pr(C|S_{na})}\\ =\\ \\dfrac{1/4}{1/4+1/2}\\ =\\ 1/3$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
