--- a/esercitazioni/02_tpt.ipynb
+++ b/esercitazioni/02_tpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4499c140",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,12 +142,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6f885fc",
+   "metadata": {},
+   "source": [
+    "***Soluzione***\n",
+    "\n",
+    "Siano $D_6$ e $D_4$ gli eventi viene scelto il dado a 6 facce, rispettivamente 4 faccie.\n",
+    "\n",
+    "$$\\Pr(D_6)=\\Pr(D_4)=1/2.$$\n",
+    "\n",
+    "Sappiamo che per $i=1,\\dots,4$ \n",
+    "\n",
+    "$$\\Pr(X=i\\,|\\,D_6)=1/6,$$\n",
+    "\n",
+    "$$\\Pr(X=i\\,|\\,D_4)=1/4.$$\n",
+    "\n",
+    "Sappiamo che per $i=5,6$ \n",
+    "\n",
+    "$$\\Pr(X=i\\,|\\,D_6)=1/6,$$\n",
+    "\n",
+    "$$\\Pr(X=i\\,|\\,D_4)=0,$$\n",
+    "\n",
+    "Per il teorema delle probabilità totali\n",
+    "\n",
+    "$$\\Pr(X=i)= \\Pr(D_6)\\cdot\\Pr(X=i\\,|\\,D_6) + \\Pr(D_4)\\cdot\\Pr(X=i\\,|\\,D_4)$$\n",
+    "\n",
+    "$$\\Pr(X=i)= (1/2)\\cdot\\big[\\Pr(X=i\\,|\\,D_6) + \\Pr(X=i\\,|\\,D_4)$$\n",
+    "\n",
+    "Quindi, per  $i=1,\\dots,4$ \n",
+    "\n",
+    "$$\\Pr(X=i)= 5/24,$$\n",
+    "\n",
+    "per $i=5,6$ \n",
+    "\n",
+    "$$\\Pr(X=i)= 1/12,$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0332039",
    "metadata": {},
    "source": [
     "***Esercizio 2***\n",
     "\n",
     "The executive of a company uses either a train or a bus to reach his office with equal probability. The train is late $10\\%$ of the times. The bus is late $20\\%$ of the times. What is the probability that the executive reaches late the office?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8caba4d2",
+   "metadata": {},
+   "source": [
+    "***Esercizio 3***\n",
+    "\n",
+    "We flip one of two coins. The first coin is fair, the other is biases: $2/3$ for tail. We will receive 2€ for tail and 1€ for head. The coins is choosen randomly. The probability to pick the unfair coin is $1/3$. Compute the expected value of our winnings."
    ]
   }
  ],
