--- a/lezioni/05_RegolaBayes.ipynb
+++ b/lezioni/05_RegolaBayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
     "\n",
     "$\\Pr(A)\\quad$ <mark>probabilità a priori</mark> in in inglese <mark class=ita>prior probability</mark>\n",
     "\n",
-    "$\\Pr(B|A)\\quad$ <mark>verosimiglianza</mark> in in inglese <mark class=ita>liklihood</mark>\n",
+    "$\\Pr(B|A)\\quad$ <mark>verosimiglianza</mark> in in inglese <mark class=ita>likelihood</mark>\n",
     "\n",
     "$\\Pr(A|B)\\quad$ <mark>probabilità a posteriori</mark> in in inglese <mark class=ita>posterior probability</mark>"
    ]
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\Pr(A|F)=0.04$$"
+       "$\\displaystyle \\Pr(A|F)=0.04$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -226,13 +226,6 @@
     "\n",
     "$\\phantom{\\Pr(C|S_{na})}\\ =\\ \\dfrac{1/4}{1/4+1/2}\\ =\\ 1/3$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
