--- a/esercitazioni/02_tpt.ipynb
+++ b/esercitazioni/02_tpt.ipynb
@@ -190,12 +190,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0088001",
+   "metadata": {},
+   "source": [
+    "***Soluzione***\n",
+    "\n",
+    "$B$ evento il dirigente prende autobus\n",
+    "\n",
+    "$T$ evento il dirigente prende treno\n",
+    "\n",
+    "$Br$ evento autobus in ritardo\n",
+    "\n",
+    "$T\\!r$ evento treno in ritardo\n",
+    "\n",
+    "$R$ evento il dirigente è in ritaro\n",
+    "\n",
+    "Il teorema delle probabilità totali dice\n",
+    "\n",
+    "$$\\Pr(R) = \\Pr(Tr)\\cdot\\Pr(T|T\\!r) +  \\Pr(Br)\\cdot\\Pr(B|Br)$$\n",
+    "\n",
+    "È implicito nel testo della domanda che la scelta treno/autobus sia indipendente dal ritardo. Quindi \n",
+    "\n",
+    "$$\\Pr(T|T\\!r) = \\Pr(T)$$\n",
+    "\n",
+    "$$\\Pr(B|Br) = \\Pr(B)$$\n",
+    "\n",
+    "Il teorema delle probabilità diventa\n",
+    "\n",
+    "$$\\Pr(R) = \\Pr(T\\!r)\\cdot\\Pr(T) +  \\Pr(Br)\\cdot\\Pr(B)$$\n",
+    "\n",
+    "$$\\Pr(R) = 0.1\\cdot (1/2) + 0.2\\cdot(1/2) = 0.15$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8caba4d2",
    "metadata": {},
    "source": [
     "***Esercizio 3***\n",
     "\n",
-    "We flip one of two coins. The first coin is fair, the other is biases: $2/3$ for tail. We will receive 2€ for tail and 1€ for head. The coins is choosen randomly. The probability to pick the unfair coin is $1/3$. Compute the expected value of our winnings."
+    "We flip one of two coins. The first coin is fair, the other is biased $2/3$ for tail. We will receive 2€ for tail and 1€ for head. The coins is choosen randomly. The probability to pick the unfair coin is $1/3$. Compute the expected value of our winnings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa69fe5c",
+   "metadata": {},
+   "source": [
+    "***Soluzione***\n",
+    "\n",
+    "Sia $X$ la variabile aleatoria *vincita*\n",
+    "\n",
+    "Calcoliamo la distribuzione di probabilità usando il teorema delle probabilità totali.\n",
+    "\n",
+    "$$\\Pr(X=1) = \\Pr(F)·\\Pr(H|F) + \\Pr(B)·\\Pr(H|B) $$\n",
+    "\n",
+    "$$\\Pr(X=2) = \\Pr(F)·\\Pr(T|F) + \\Pr(B)·\\Pr(T|B) $$\n",
+    "\n",
+    "Dove \n",
+    "\n",
+    "$T$ evento *tail*\n",
+    "\n",
+    "$H$ evento *head*\n",
+    "\n",
+    "$F$ evento moneta *fair*\n",
+    "\n",
+    "$B$ evento moneta *biased*\n",
+    "\n",
+    "$$\\Pr(X=1) = (2/3)·(1/2) + (1/3)·(1/3) = 4/9 $$\n",
+    "\n",
+    "$$\\Pr(X=2) = (2/3)·(1/2) + (1/3)·(2/3) = 5/9 $$\n",
+    "\n",
+    "Il valore atteso è\n",
+    "\n",
+    "$${\\rm E}(X) = 1·\\Pr(X=1) + 2·\\Pr(X=1) = 14/9 $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
