--- a/lezioni/11_TavolaRiassuntivaTest.ipynb
+++ b/lezioni/11_TavolaRiassuntivaTest.ipynb
@@ -118,7 +118,7 @@
    ],
    "source": [
     "# RUN THIS CELL: it loads some style files\n",
-    "from IPython.core.display import HTML\n",
+    "from IPython.core.display import HTML, display, Math\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
@@ -127,87 +127,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Domanda 1\n",
+    "# Test d'ipotesi (terminologia)\n",
     "\n",
-    "Consideriamo due sequenze di $25$ caratteri dell'alfabeto $\\{a,g,c,t\\}$. Assumiamo che tutti i caratteri occorrano con la stessa probabilità indipendentemente dalla posizione. Qual è la probabilità che due sequenze coincidano in $\\ge 10$ posizioni?"
+    "Nei test di ipotesi la scelta tra risultato positivo/negativo viene fatta in base al valore di una <mark>statistica</mark>. Si sceglie un intervallo detto <mark>regione di rifiuto</mark>. Se il valore è in questo intervallo l'esito si considera positivo (N.B. rifiuto $\\,\\sim\\,$ positivo).\n",
+    "\n",
+    "Introduciamo la terminologia dei test d'ipotesi basandoci sulla notazione usata per i test diagnostici.\n",
+    "\n",
+    "1.  L'<mark>ipotesi nulla</mark> denotata con <mark>$H_0$</mark> definisce l'insieme dei *sani* (qui $H_0$ è anche l'evento corrispondente, quello che nei test disgnostici denotavamo con $\\neg D$).\n",
+    "\n",
+    "2. L'<mark>ipotesi alternativa</mark> denotata con <mark>$H_A$</mark> descrive la *patologia*, ovvero definisce l'insieme dei *malati* (qui $H_A$ è anche l'evento corrispondente, quello che nei test disgnostici era $D$).\n",
+    "\n",
+    "3. Anche se possiamo immaginare $H_A=\\neg H_0$, è usuale enunciare esplicitamente $H_A$. Infatti spesso escludiamo a priori qualche possibilità. Quindi $H_0\\cup H_A$ descrive la gamma di eventi che riteniamo possibili.\n",
+    "\n",
+    "4. L'espressione: <mark>rifiutiamo $H_0$</mark> è sinonima di *l'esito del test è positivo*. Noi denotiamo l'evento con <mark>$T$</mark>.\n",
+    "\n",
+    "5. L'espressione: <mark>NON rifiutiamo $H_0$</mark> è sinonima di <mark>l'esito del test è negativo</mark>. Noi denotiamo l'evento con <mark>$\\neg T$</mark>.\n",
+    "\n",
+    "6. Nel progettare il test si decide come definire $T$ (e quindi $\\neg T$) a seconda di quanti falsi positivi/negativi si vuole o può tollerare (in base ai costi/rischi che questi due errori comportano). Ci si calcola quindi $\\Pr(T|H_0)$ e $\\Pr(\\neg T|H_A)$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Risposta 1\n",
-    "\n",
-    "Devo calcolare $\\Pr(X\\ge 10)$ con $X\\sim B(25,1/4)$.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.07132826270035508"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from scipy.stats import binom\n",
-    "\n",
-    "1 - binom.cdf(9,25,1/4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Domanda 2\n",
-    "\n",
-    "In un gioco a due giocatori, $A$ e $B$, ogni partita vale un punto che è vinto da uno dei due giocatori (non ci sono patte). Vince il gioco chi per primo raggiunge 8 punti. In ciascuna partita $A$ vince con probabilità $0.6$.\n",
-    "\n",
-    "Qual è la probabilità che $A$ vinca il gioco in $\\le11$ partite?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Risposta 2\n",
-    "\n",
-    "Devo calcolare $\\Pr(X\\ge 8)$ con $X\\sim B(11,0.6)$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.29628426239999994"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 - binom.cdf(7,11,0.6)"
+    "<div style=\"vertical-align: top;padding:5px\">\n",
+    "    <div class=\"errore\">\n",
+    "        $T\\cap H_0$ \n",
+    "        <span style=\"float:right;\">falso positivo</span><br>\n",
+    "        <span style=\"float:right;\">errore I tipo</span><br>\n",
+    "        <hr>\n",
+    "        $\\Pr(T|H_0)\\ =\\ \\alpha$ \n",
+    "        <span style=\"float:right;\">significatività</span><br> \n",
+    "        <span style=\"float:right;\">&nbsp;</span>\n",
+    "    </div>\n",
+    "    <div  class=\"corretto\">\n",
+    "         $T\\cap H_A$ \n",
+    "         <span style=\"float:right;\">corretto positivo</span><br> \n",
+    "         <span style=\"float:right;\">&nbsp;</span><br>\n",
+    "         <hr>\n",
+    "         $\\Pr(T|H_A)\\ =\\ 1-\\beta$ \n",
+    "         <span style=\"float:right;\">sensibilità</span><br>\n",
+    "         <span style=\"float:right;\">potenza</span>\n",
+    "    </div>\n",
+    "</div>\n",
+    "<div style=\"vertical-align: top;margin:5px;\">\n",
+    "    <div class=\"corretto\">\n",
+    "        $\\neg T\\cap H_0$\n",
+    "        <span style=\"float:right;\">corretto negativo</span><br> \n",
+    "        <span style=\"float:right;\">&nbsp;</span><br>\n",
+    "        <hr>\n",
+    "        $\\Pr(\\neg T|H_0)\\ =\\ 1-\\alpha$ \n",
+    "        <span style=\"float:right;\">specificità</span><br> \n",
+    "        <span style=\"float:right;\">confidenza</span>\n",
+    "    </div>\n",
+    "    <div class=\"errore\">\n",
+    "         $\\neg T\\cap H_A$ \n",
+    "         <span style=\"float:right;\">falso negativo</span><br> \n",
+    "         <span style=\"float:right;\">errore II tipo</span><br>\n",
+    "         <hr>\n",
+    "         $\\Pr(\\neg T|H_A)\\ =\\ \\beta$\n",
+    "        <span style=\"float:right;\">&nbsp;</span><br>\n",
+    "        <span style=\"float:right;\">&nbsp;</span>\n",
+    "    </div>\n",
+    "</div>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
