--- a/esercitazioni/06_binomiale.ipynb
+++ b/esercitazioni/06_binomiale.ipynb
@@ -12,15 +12,15 @@
        "div.jp-MarkdownOutput {font-family: \"Times New Roman\", Times, serif;   \n",
        "    /* background-color: #eee;  */\n",
        "    /* border-left: 5px solid #00b5b4; */\n",
-       "    font-size: 14pt;\n",
-       "    line-height: 150%;\n",
+       "    font-size: 10pt;\n",
+       "    line-height: 140%;\n",
        "}\n",
        ".text_cell_render {\n",
        "    font-family: \"Times New Roman\", Times, serif;    \n",
        "    /* background-color: #eee;  */\n",
        "    /* border-left: 5px solid #00b5b4; */\n",
-       "    font-size: 18pt;\n",
-       "    line-height: 150%;\n",
+       "    font-size: 14pt;\n",
+       "    line-height: 140%;s\n",
        "}\n",
        "\n",
        "h1 {\n",
@@ -38,7 +38,7 @@
        "h3 {\n",
        "    font-size: large !important;\n",
        "    margin-top: 0ex !important;\n",
-       "    margin-bottom: 1ex !important;\n",
+       "    margin-bottom: 0ex !important;\n",
        "    padding-bottom: 0ex !important;\n",
        "}\n",
        "\n",
@@ -118,7 +118,7 @@
    ],
    "source": [
     "# RUN THIS CELL: it loads some style files\n",
-    "from IPython.display import HTML, display, Math\n",
+    "from IPython.display import HTML\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
@@ -127,72 +127,153 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test d'ipotesi (terminologia)\n",
+    "### Esercizio 1\n",
     "\n",
-    "Nei test di ipotesi la scelta tra risultato positivo/negativo viene fatta in base al valore di una <mark>statistica</mark>. Si sceglie un intervallo detto <mark>regione di rifiuto</mark>. Se il valore è in questo intervallo l'esito si considera positivo (N.B. rifiuto $\\,\\sim\\,$ positivo).\n",
-    "\n",
-    "Introduciamo la terminologia dei test d'ipotesi basandoci sulla notazione usata per i test diagnostici.\n",
-    "\n",
-    "1.  L'<mark>ipotesi nulla</mark> denotata con <mark>$H_0$</mark> definisce l'insieme dei *sani* (qui $H_0$ è anche l'evento corrispondente, quello che nei test disgnostici denotavamo con $\\neg D$).\n",
-    "\n",
-    "2. L'<mark>ipotesi alternativa</mark> denotata con <mark>$H_A$</mark> descrive la *patologia*, ovvero definisce l'insieme dei *malati* (qui $H_A$ è anche l'evento corrispondente, quello che nei test disgnostici era $D$).\n",
-    "\n",
-    "3. Anche se possiamo immaginare $H_A=\\neg H_0$, è usuale enunciare esplicitamente $H_A$. Infatti spesso escludiamo a priori qualche possibilità. Quindi $H_0\\cup H_A$ descrive la gamma di eventi che riteniamo possibili.\n",
-    "\n",
-    "4. L'espressione: <mark>rifiutiamo $H_0$</mark> è sinonima di *l'esito del test è positivo*. Noi denotiamo l'evento con <mark>$T$</mark>.\n",
-    "\n",
-    "5. L'espressione: <mark>NON rifiutiamo $H_0$</mark> è sinonima di <mark>l'esito del test è negativo</mark>. Noi denotiamo l'evento con <mark>$\\neg T$</mark>.\n",
-    "\n",
-    "6. Nel progettare il test si decide come definire $T$ (e quindi $\\neg T$) a seconda di quanti falsi positivi/negativi si vuole o può tollerare (in base ai costi/rischi che questi due errori comportano). Ci si calcola quindi $\\Pr(T|H_0)$ e $\\Pr(\\neg T|H_A)$."
+    "Consideriamo due sequenze di $25$ caratteri dell'alfabeto $\\{a,g,c,t\\}$. Assumiamo che tutti i caratteri occorrano con la stessa probabilità indipendentemente dalla posizione. Qual è la probabilità che due sequenze coincidano in $\\ge 10$ posizioni?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"vertical-align: top;padding:5px\">\n",
-    "    <div class=\"errore\">\n",
-    "        $T\\cap H_0$ \n",
-    "        <span style=\"float:right;\">falso positivo</span><br>\n",
-    "        <span style=\"float:right;\">errore I tipo</span><br>\n",
-    "        <hr>\n",
-    "        $\\Pr(T|H_0)\\ =\\ \\alpha$ \n",
-    "        <span style=\"float:right;\">&nbsp;</span>\n",
-    "        <span style=\"float:right;\">significatività</span><br> \n",
-    "        <span style=\"float:right;\">&nbsp;</span>\n",
-    "    </div>\n",
-    "    <div  class=\"corretto\">\n",
-    "         $T\\cap H_A$ \n",
-    "         <span style=\"float:right;\">corretto positivo</span><br> \n",
-    "         <span style=\"float:right;\">&nbsp;</span><br>\n",
-    "         <hr>\n",
-    "         $\\Pr(T|H_A)\\ =\\ 1-\\beta$ \n",
-    "         <span style=\"float:right;\">sensibilità</span><br>\n",
-    "         <span style=\"float:right;\">&nbsp;/&nbsp;</span>\n",
-    "         <span style=\"float:right;\">potenza</span>\n",
-    "    </div>\n",
-    "</div>\n",
-    "<div style=\"vertical-align: top;margin:5px;\">\n",
-    "    <div class=\"corretto\">\n",
-    "        $\\neg T\\cap H_0$\n",
-    "        <span style=\"float:right;\">corretto negativo</span><br> \n",
-    "        <span style=\"float:right;\">&nbsp;</span><br>\n",
-    "        <hr>\n",
-    "        $\\Pr(\\neg T|H_0)\\ =\\ 1-\\alpha$ \n",
-    "        <span style=\"float:right;\">specificità</span><br> \n",
-    "        <span style=\"float:right;\">&nbsp;/&nbsp;</span>\n",
-    "        <span style=\"float:right;\">confidenza</span>\n",
-    "    </div>\n",
-    "    <div class=\"errore\">\n",
-    "         $\\neg T\\cap H_A$ \n",
-    "         <span style=\"float:right;\">falso negativo</span><br> \n",
-    "         <span style=\"float:right;\">errore II tipo</span><br>\n",
-    "         <hr>\n",
-    "         $\\Pr(\\neg T|H_A)\\ =\\ \\beta$\n",
-    "        <span style=\"float:right;\">&nbsp;</span><br>\n",
-    "        <span style=\"float:right;\">&nbsp;</span>\n",
-    "    </div>\n",
-    "</div>"
+    "***Soluzione***\n",
+    "\n",
+    "Devo calcolare $\\Pr(X\\ge 10)$ con $X\\sim B(25,1/4)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07132826270035508"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    "1 - binom.cdf(9,25,1/4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Esercizio 2\n",
+    "\n",
+    "In un gioco a due giocatori, $A$ e $B$, ogni partita vale un punto che è vinto da uno dei due giocatori (non ci sono patte). Vince il gioco chi per primo raggiunge 8 punti. In ciascuna partita $A$ vince con probabilità $0.6$.\n",
+    "\n",
+    "Qual è la probabilità che $A$ vinca il gioco in $\\le11$ partite?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Soluzione***\n",
+    "\n",
+    "Devo calcolare $\\Pr(X\\ge 8)$ con $X\\sim B(11,0.6)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29628426239999994"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - binom.cdf(7,11,0.6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Esercizio 3\n",
+    "\n",
+    "Abbiamo $35$ monete di cui $28$ sono equilibrate, le altre sono difettose e hanno\n",
+    "probabilità $0.6$ di dare come risultato *Testa*. Scegliamo a caso una di queste $35$ monete. Per\n",
+    "decidere se è equilibrata o difettosa, la lanciamo $30$ volte. Se otteniamo ≥ $18$ volte *Testa* diremo\n",
+    "che è difettosa. Dei seguenti dati si usino solo quelli pertinenti"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Domanda 1\n",
+    "\n",
+    "Qual è la probabilità di dichiarare difettosa una moneta che non lo è?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$X\\in\\{0,1,\\dots,30\\}$ v.a. numero di risultati Testa dal lancio di una monetina scelta a caso.\n",
+    "\n",
+    "$X_e\\in\\{0,1,\\dots,3\\}$ v.a. numero di risultati Testa dal lancio di una monetina equilibrata. \n",
+    "\n",
+    "$X_e\\sim B(30,0.5)$ \n",
+    "\n",
+    "$X_d\\in\\{0,1,\\dots,3\\}$ v.a. numero di risultati Testa dal lancio di una monetina difettosa.\n",
+    "\n",
+    "$X_d\\sim B(30,0.6)$ \n",
+    "\n",
+    "**Risposta** $\\quad\\Pr(X_e\\ge18)$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Domanda 2\n",
+    "\n",
+    "Qual è la probabilità che una moneta dichiarata difettosa lo sia veramente?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Risposta** \n",
+    "\n",
+    "Sia $D$ evento abbiamo scelto una moneta difettosa.\n",
+    "\n",
+    "Dobbiamo calcolare $\\Pr(D|X\\ge18)$.\n",
+    "\n",
+    "Conosciamo:\n",
+    "\n",
+    "$\\Pr(X\\ge18|D)=\\Pr(X_d\\ge18)$\n",
+    "\n",
+    "$\\Pr(D)=7/35=1/5$\n",
+    "\n",
+    "Applicando la regola di Bayes\n",
+    "\n",
+    "\n",
+    "$\\Pr(D|X\\ge18)=\\dfrac{\\Pr(X_d\\ge18)\\Pr(D)}{\\Pr(X\\ge18)}$\n",
+    " \n",
+    "Il valore $\\Pr(X\\ge18)$ lo calcoliamo col teorema delle probabilità totali:\n",
+    "\n",
+    "$\\Pr(X\\ge18)=\\Pr(X_d\\ge18)\\Pr(D)+\\Pr(X_e\\ge18)\\Pr(\\neg D)$."
    ]
   }
  ],
@@ -216,5 +297,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
