--- a/lezioni/13_Effect.size.ipynb
+++ b/lezioni/13_Effect.size.ipynb
@@ -153,7 +153,7 @@
    "id": "8823f595",
    "metadata": {},
    "source": [
-    "markVorremmo calcolare la probabilità di un errore del II tipo (falso negativo) ovvero $\\beta=\\Pr(X>30 | H_A)$\n",
+    "Vorremmo calcolare la probabilità di un errore del II tipo (falso negativo) ovvero $\\beta=\\Pr(X>30 | H_A)$\n",
     "\n",
     "Purtroppo l'ipotesi alternativa non specifica una distribuzione ma una famiglia: $B(100,p)$ con $p<.4$.\n",
     "\n",
@@ -170,6 +170,14 @@
     "\n",
     "$\\beta=1-f(30,100,.34)$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "770b32ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
