--- a/lezioni/15_IntervalloConfidenza.ipynb
+++ b/lezioni/15_IntervalloConfidenza.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d39291ac",
    "metadata": {},
    "outputs": [
     {
@@ -118,68 +117,97 @@
     }
    ],
    "source": [
-    "# RUN THIS CELL: it loads some style files\n",
-    "from IPython.display import HTML, display, Math\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import t as tstudent\n",
+    "\n",
+    "# this loads some HTML style files\n",
+    "from IPython.core.display import HTML\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45772c9d",
    "metadata": {},
    "source": [
-    "# Intervallo di confidenza di una proporzione\n",
+    "# Intervallo di confidenza (distribuzione normale)\n",
     "\n",
-    "Consideriamo v.a. $X_p\\sim B(1,p)$ con $p$ ignota. Per stimare $p$ usiamo $n$ variabili indipendenti $X_{p,1},\\dots,X_{p,n}$ distribuite come $X_p$ (ovvero, ripetiamo l'esperimento $n$ volte).\n",
-    "La media empirica (o campionaria) è la seguente variabile aleatoria \n",
     "\n",
-    "$$\\bar X_p\\quad=\\quad\\dfrac1n\\sum^n_{i=1}X_{p,i}$$\n",
+    "Se $Z\\sim N(0,1)$ scriviamo $z_{\\alpha/2}$ per quel numero tale che\n",
     "\n",
-    "Sappiamo che ${\\rm E}(\\bar X_p)=p$, questo perché $n\\bar X_p\\sim B(n,p)$ ha valore atteso $np$.\n",
+    "$\\qquad\\Pr\\big(Z < - z_{\\alpha/2}\\big)\n",
+    "\\ =\\ \n",
+    "\\dfrac{\\alpha}{2}$\n",
     "\n",
-    "Supponiamo di osservare $\\bar x$.\n",
+    "Equivalentemente\n",
     "\n",
-    "Fissiamo un $\\alpha$, la significatività che vogliamo ottenere. \n",
-    "Alternativamente fissiamo <mark>livello di confidenza</mark>, $1-\\alpha$. \n",
+    "$\\qquad\\Pr\\big(-z_{\\alpha/2} < Z < z_{\\alpha/2}\\big)\n",
+    "\\ =\\ \n",
+    "1-\\alpha$\n",
     "\n",
-    "Consideriamo l'insieme dei $p$ che soddisfano le seguenti condizioni\n",
     "\n",
-    "$\\Pr(\\bar X_p\\le\\bar x)\\le\\alpha/2$ \n",
-    "and \n",
-    "$\\Pr(\\bar X_p\\ge\\bar x)\\le\\alpha/2$\n",
+    "Sia $X_1,\\dots,X_n$ un campione con distribusione $N(\\mu,\\sigma)$ con $\\mu$ ignota e $\\sigma$ nota. Sia $\\bar X$ la usuale statistica *media campionaria*.\n",
     "\n",
-    "(abbiamo diviso equamente la probabilità d'errore a destra e sinistra, troveremo quindi un intervallo centrato in $\\bar x$).\n",
+    "$\\qquad\\displaystyle\\Pr \\left (-z_{\\alpha/2} < \\frac{\\bar X - \\mu}{\\sigma\\big/\\sqrt{n}} < z_{\\alpha/2} \\right)\n",
+    "\\ =\\ \n",
+    "1-\\alpha$\n",
     "\n",
-    "Il calcolo di questo intervallo va fatto numericamente.\n",
+    "Equivalentemente\n",
     "\n",
-    "Ogni libreria statistica ha una funzione per questo calcolo.\n",
+    "$\\qquad\\displaystyle\\Pr \\left (\\bar X-z_{\\alpha/2}\\dfrac{\\sigma}{\\sqrt{n}} < \\mu < \\bar X + z_{\\alpha/2}\\dfrac{\\sigma}{\\sqrt{n}} \\right)\n",
+    "\\ =\\ \n",
+    "1-\\alpha$\n",
     "\n",
-    "Questo metodo di stimare l'intervallo di confidenza si chiama di <mark>Clopper–Pearson</mark>\n",
+    "Se il valore della media campionaria è $\\bar x$, diremo che $(\\bar x-\\varepsilon,\\bar x+\\varepsilon)$, dove $\\varepsilon=z_{\\alpha/2}\\big(\\sigma\\big/\\sqrt{n}\\big)$, è un intervallo di confidenza di livello $1-\\alpha$.\n",
     "\n",
-    "Vedremo un altro metodo più avanti."
+    "L'interpretazione è: se ripetiamo l'esperimento, con probabilità $1-\\alpha$ ritroveremo un intervallo che contiene $\\mu$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0edc3dbe",
    "metadata": {},
    "source": [
-    "## Confronto con il test di ipotesi\n",
+    "# Esempio\n",
     "\n",
-    "Supponiamo che applicando il metodo di Clopper–Pearson troviamo l'intervallo di confidenza $[p_1,p_2]$.\n",
+    "Si  estrae  un  campione  di  dimensione  $100$  da  una  popolazione  con  distribuzione  normale  con  varianza $\\sigma^2 = 225$ nota e valore atteso incognito $\\mu$.\n",
+    "Il valore della media campionaria ottenuto è $\\bar x = 1450$.\n",
+    "Vogliamo calcolare un intervallo di confidenza del valore atteso a livello di confidenza di $1-\\alpha=0.95$.\n",
     "\n",
-    "Immaginiamo il seguente test di ipotesi:\n",
+    "Assumiamo di conoscere i valori della funzione $g(\\alpha)$ che calcola $z$ tale che $\\Pr(Z\\le z)=\\alpha$ dove $Z$ è una v.a. normale standard.\n",
     "\n",
-    "$H_0:$ la proporzione è $p_2$\n",
+    "$\\displaystyle\\qquad \\frac{\\sigma}{\\sqrt{n}}=1.5$.\n",
     "\n",
-    "$H_A:$ la proporzione è $<p_2$\n",
+    "$\\displaystyle\\qquad z_{.025}\n",
+    "\\ =\\ \n",
+    "-g(0.025)$\n",
     "\n",
-    "Supponiamo di misurare $\\bar x$ e calcoliamo il $p$-valore (i.e. la significatività can cui possiamo rigettare l'ipotesi nulla)\n",
+    "$\\displaystyle\\qquad\\varepsilon\n",
+    "\\ =\\ \n",
+    "$` 1.96 * 1.5 ≈ 3`\n",
     "\n",
-    "$\\Pr(\\bar X_p\\le \\bar x | p=p_2)= \\alpha/2$\n",
+    "L'intervallo è $(1447,\\ 1453)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.9599639845400545"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Questo è il valore numerico di g(0.025):\n",
     "\n",
-    "Il ragionamento simmetrico vale per $p_1$."
+    "norm.ppf(0.025)"
    ]
   }
  ],
@@ -203,5 +231,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
