--- a/lezioni/16_p-valore.ipynb
+++ b/lezioni/16_p-valore.ipynb
@@ -12,15 +12,15 @@
        "div.jp-MarkdownOutput {font-family: \"Times New Roman\", Times, serif;   \n",
        "    /* background-color: #eee;  */\n",
        "    /* border-left: 5px solid #00b5b4; */\n",
-       "    font-size: 14pt;\n",
-       "    line-height: 150%;\n",
+       "    font-size: 10pt;\n",
+       "    line-height: 140%;\n",
        "}\n",
        ".text_cell_render {\n",
        "    font-family: \"Times New Roman\", Times, serif;    \n",
        "    /* background-color: #eee;  */\n",
        "    /* border-left: 5px solid #00b5b4; */\n",
-       "    font-size: 18pt;\n",
-       "    line-height: 150%;\n",
+       "    font-size: 14pt;\n",
+       "    line-height: 140%;s\n",
        "}\n",
        "\n",
        "h1 {\n",
@@ -38,7 +38,7 @@
        "h3 {\n",
        "    font-size: large !important;\n",
        "    margin-top: 0ex !important;\n",
-       "    margin-bottom: 1ex !important;\n",
+       "    margin-bottom: 0ex !important;\n",
        "    padding-bottom: 0ex !important;\n",
        "}\n",
        "\n",
@@ -117,11 +117,8 @@
     }
    ],
    "source": [
-    "from scipy.stats import norm\n",
-    "from scipy.stats import t as tstudent\n",
-    "\n",
-    "# this loads some HTML style files\n",
-    "from IPython.core.display import HTML\n",
+    "# RUN THIS CELL: it loads some style files\n",
+    "from IPython.display import HTML, display, Math\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
@@ -130,84 +127,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intervallo di confidenza (distribuzione normale)\n",
+    "# Uso del p-valore (esempio con test binomiale)\n",
     "\n",
+    "Abbiamo monete equilibrate e monete difettose. Le monete equilibrate hanno probabilità di successo $p=1/2$ le monete difettose hanno probabilità di successo ignota $p< 1/2$. Non conosciamo la frazione di monete difettose. Vogliamo fare il seguente test di ipotesi con una significatività $\\alpha=5\\%$:\n",
     "\n",
-    "Se $Z\\sim N(0,1)$ scriviamo $z_{\\alpha/2}$ per quel numero tale che\n",
+    "$H_0:\\kern3.5ex p=1/2\\quad$ ipotesi nulla\n",
     "\n",
-    "$\\qquad\\Pr\\big(Z < - z_{\\alpha/2}\\big)\n",
-    "\\ =\\ \n",
-    "\\dfrac{\\alpha}{2}$\n",
+    "$H_A:\\kern3ex p< 1/2\\quad$ ipotesi alternativa\n",
     "\n",
-    "Equivalentemente\n",
-    "\n",
-    "$\\qquad\\Pr\\big(-z_{\\alpha/2} < Z < z_{\\alpha/2}\\big)\n",
-    "\\ =\\ \n",
-    "1-\\alpha$\n",
-    "\n",
-    "\n",
-    "Sia $X_1,\\dots,X_n$ un campione con distribusione $N(\\mu,\\sigma)$ con $\\mu$ ignota e $\\sigma$ nota. Sia $\\bar X$ la usuale statistica *media campionaria*.\n",
-    "\n",
-    "$\\qquad\\displaystyle\\Pr \\left (-z_{\\alpha/2} < \\frac{\\bar X - \\mu}{\\sigma\\big/\\sqrt{n}} < z_{\\alpha/2} \\right)\n",
-    "\\ =\\ \n",
-    "1-\\alpha$\n",
-    "\n",
-    "Equivalentemente\n",
-    "\n",
-    "$\\qquad\\displaystyle\\Pr \\left (\\bar X-z_{\\alpha/2}\\dfrac{\\sigma}{\\sqrt{n}} < \\mu < \\bar X + z_{\\alpha/2}\\dfrac{\\sigma}{\\sqrt{n}} \\right)\n",
-    "\\ =\\ \n",
-    "1-\\alpha$\n",
-    "\n",
-    "Se il valore della media campionaria è $\\bar x$, diremo che $(\\bar x-\\varepsilon,\\bar x+\\varepsilon)$, dove $\\varepsilon=z_{\\alpha/2}\\big(\\sigma\\big/\\sqrt{n}\\big)$, è un intervallo di confidenza di livello $1-\\alpha$.\n",
-    "\n",
-    "L'interpretazione è: se ripetiamo l'esperimento, con probabilità $1-\\alpha$ ritroveremo un intervallo che contiene $\\mu$."
+    "Per decidere tra equilibrata o difettosa, lanciamo la moneta $40$ volte e osserviamo $x=11$ successi. Possiamo rigettare l'ipotesi nulla con la significatività che ci siamo prefissi?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Esempio\n",
+    "## Metodo 1 (lungo)\n",
     "\n",
-    "Si  estrae  un  campione  di  dimensione  $100$  da  una  popolazione  con  distribuzione  normale  con  varianza $\\sigma^2 = 225$ nota e valore atteso incognito $\\mu$.\n",
-    "Il valore della media campionaria ottenuto è $\\bar x = 1450$.\n",
-    "Vogliamo calcolare un intervallo di confidenza del valore atteso a livello di confidenza di $1-\\alpha=0.95$.\n",
+    "Calcoliamo la regione di rifiuto di un test con significatività $\\alpha$ e controlliamo se $x$, il risultato ottenuto, appartiene a questa regione. La zona di rifiuto ha la forma $[0, k_\\alpha]$ dove $k_\\alpha$ è un qualche numero che dipende da $\\alpha$.\n",
     "\n",
-    "Assumiamo di conoscere i valori della funzione $g(\\alpha)$ che calcola $z$ tale che $\\Pr(Z\\le z)=\\alpha$ dove $Z$ è una v.a. normale standard.\n",
+    "$k_\\alpha$ è l'intero tale che $\\Pr( X\\le k_\\alpha)=\\alpha$ dove $X\\sim B(40,1/2)$. (Siccome la distribuzione è discreta potremmo non ottenere un intero $k_\\alpha$ che soddisfa uguaglianza in modo esatto, in questo caso prendiamo il $k_\\alpha$ che meglio approssima dal basso.)\n",
     "\n",
-    "$\\displaystyle\\qquad \\frac{\\sigma}{\\sqrt{n}}=1.5$.\n",
-    "\n",
-    "$\\displaystyle\\qquad z_{.025}\n",
-    "\\ =\\ \n",
-    "-g(0.025)$\n",
-    "\n",
-    "$\\displaystyle\\qquad\\varepsilon\n",
-    "\\ =\\ \n",
-    "$` 1.96 * 1.5 ≈ 3`\n",
-    "\n",
-    "L'intervallo è $(1447,\\ 1453)$."
+    "La funzione che dato $\\alpha$ calcola il massimo $k_\\alpha$ tale che $\\Pr( X\\le k_\\alpha)\\le \\alpha$ si chiama funzione percentile (o quantile)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.9599639845400545"
+       "15.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Questo è il valore numerico di g(0.025):\n",
+    "from scipy.stats import binom\n",
+    "k_alpha = binom.ppf(0.05, 40,0.5)\n",
+    "k_alpha"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poiché $x = 11\\le 15 = k_\\alpha$, rifiuto l'ipotesi nulla."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metodo 2 (p-valore)\n",
     "\n",
-    "norm.ppf(0.025)"
+    "Per controllare se $x\\le k_\\alpha$ non serve calcolare $k_\\alpha$!!!\n",
+    "\n",
+    "Osserviamo che $x\\le k_\\alpha$ se e solo se $\\Pr(X\\le x)\\le \\Pr( X\\le k_\\alpha)$.\n",
+    " Ma $\\Pr( X\\le k_\\alpha)$ è per definizione uguale ad $\\alpha$. Quindi rifiutiamo l'ipotesi nulla se $\\Pr(X\\le x)\\le \\alpha$.\n",
+    " \n",
+    "La probabilità $\\Pr(X\\le x)$ si chiama il <mark>p-valore</mark> dell'osservazione $x$.\n",
+    "\n",
+    "Nel nostro caso il p-valore è"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0032132880478457099"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value = binom.cdf(11, 40,0.5)\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poiché il p-valore $= 0.003 < 0.05 = \\alpha$ rifiuto l'ipotesi nulla."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_alpha = binom.ppf(0.05, 40,0.5) + \n",
+    "k_alpha"
    ]
   }
  ],
